[project]
  name = "pulumi_cloudflare_terraform"
  description = "A Pulumi provider dynamically bridged from cloudflare."
  dependencies = ["parver>=0.2.1", "pulumi>=3.142.0,<4.0.0", "semver>=2.8.1", "typing-extensions>=4.11; python_version < \"3.11\""]
  readme = "README.md"
  requires-python = ">=3.9"
  version = "5.1.0"
  [project.urls]
    Repository = "https://github.com/cloudflare/terraform-provider-cloudflare"

[build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"

[tool]
  [tool.setuptools]
    [tool.setuptools.package-data]
      pulumi_cloudflare = ["py.typed", "pulumi-plugin.json"]
